# backend-gestao-revestimento/src/main/java/br/com/redeasso/gestao/catalogo/api/PisoRequest.java
@@ -28,6 +28,7 @@ public record PisoRequest(
         @Size(max = 2048) String linkSite,
         @Size(max = 2048) String linkFoto,
         @Size(max = 2048) String linkFotoOrigem,
+        @Size(max = 2048) String linkPaginacao,
         @Size(max = 2048) String linkAreaCentral,
         @DecimalMin("0") @Digits(integer = 12, fraction = 6) BigDecimal valor,
         @DecimalMin("0") @Digits(integer = 12, fraction = 6) BigDecimal estoqueM2,
@@ -55,6 +56,7 @@ public record PisoRequest(
                 linkSite,
                 linkFoto,
                 linkFotoOrigem,
+                linkPaginacao,
                 linkAreaCentral,
                 valor,
                 estoqueM2,
