# backend-gestao-revestimento/src/main/java/br/com/redeasso/gestao/catalogo/api/PisoResponse.java
@@ -25,6 +25,7 @@ public record PisoResponse(
         String linkSite,
         String linkFoto,
         String linkFotoOrigem,
+        String linkPaginacao,
         String linkAreaCentral,
         BigDecimal valor,
         BigDecimal estoqueM2,
@@ -54,6 +55,7 @@ public record PisoResponse(
                 piso.getLinkSite(),
                 piso.getLinkFoto(),
                 piso.getLinkFotoOrigem(),
+                piso.getLinkPaginacao(),
                 piso.getLinkAreaCentral(),
                 piso.getValor(),
                 piso.getEstoqueM2(),
